force-app/main/default/objects/Job_Procedure_Requirement__c/Job_Procedure_Requirement__c.object-meta.xml
<CustomObject>
    <label>Job_Procedure_Requirement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Job_Procedure_Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job_Procedure_Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>