force-app/main/default/objects/Job_Procedure_Requirement__c/fields/Procedure_Name__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Procedure_Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>